--- a/index.html
+++ b/index.html
@@ -317,12 +317,15 @@
     async function fetchWeather(zip) {
         const url = `https://api.openweathermap.org/data/2.5/weather?zip=${zip},us&units=imperial&appid=${weatherApiKey}`;
         try {
+            console.log(`Fetching weather for zip: ${zip}`);
+            console.log(`URL: ${url}`);
             const response = await fetch(url);
-            if (!response.ok) throw new Error(`Failed to fetch weather for ${zip}`);
+            if (!response.ok) throw new Error(`Failed to fetch weather for ${zip}: ${response.statusText}`);
             const data = await response.json();
+            console.log(`Weather data for ${zip}:`, data);
             return data.main.temp; // Temperature in Fahrenheit
         } catch (error) {
-            console.error(error);
+            console.error(`Error fetching weather for ${zip}:`, error);
             return null;
         }
     }
