--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
     // Weather functionality using NWS API
     const zipToLatLon = {
         '77002': { lat: 29.752552016514958, lon: -95.37041452085252 }, // Downtown Houston
+		'77006': { lat: 29.743058828618043, lon: -95.38872535855693 }, // Midtown
         '77380': { lat: 30.156561330335677, lon: -95.49660348630132 }, // The Woodlands
         '77373': { lat: 30.060076989444728, lon: -95.38425991103118 }, // Spring
         '77339': { lat: 30.044222740754748, lon: -95.21623381365497 }, // Kingwood
