--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 <body>
 	<!-- Mobile menu toggle: button-driven accessible drawer (replaces checkbox pattern) -->
 <header class="site-header">
-  <div class="header-left">
-    <img src="img/icoW.png" alt="Hourly Houston logo" class="logo">
-    <h2 class="site-title">Hourly Houston</h2>
-  </div>
+	<div class="header-left">
+		<a href="/" class="home-link">
+			<img src="img/icoW.png" alt="Hourly Houston logo" class="logo">
+			<h2 class="site-title">Hourly Houston</h2>
+		</a>
+	</div>
 
   <div class="header-right">
 		<a href="#" class="cta-link" aria-label="Test">
