--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 		<a href="#" class="cta-link" aria-label="Test">
 			<button class="btn">Test</button>
 		</a>
+				<!-- desktop search form (hidden on small screens) -->
+				<form class="search-form" action="/search.html" method="get" role="search">
+					<label for="site-search" class="visually-hidden">Search articles</label>
+					<input id="site-search" name="q" type="search" placeholder="Search articles" aria-label="Search articles">
+					<button type="submit" aria-label="Submit search">🔎</button>
+				</form>
         	<!-- hamburger button: toggles the drawer on small screens -->
         	<button class="hamburger" aria-label="Open menu" aria-controls="drawer" aria-expanded="false" title="Open menu"><span class="bar"></span></button>
   </div>
